--- a/test/yaml/test.yml
+++ b/test/yaml/test.yml
@@ -4,11 +4,11 @@ attrs: id, name, age, nick_name
 
 query:
     - select {{ test.attrs }} from test where
-    - age > :age
+    - age > $age
 
 ifTest:
     - if:
-        test: :param !== null
+        test: $param !== null
         sql: select * from test
 
 forTest:
@@ -16,7 +16,7 @@ forTest:
     - id in (
     - for:
           array: ids
-          sql: :id
+          sql: $id
           seperator: ','
     - )
 
@@ -24,5 +24,5 @@ batchInsert:
     - insert into test(name, age) values
     - for:
           array: data
-          sql: (:name, :age)
+          sql: ($name, $age)
           seperator: ','
