--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   ],
   "author": "wolfx",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/FurryWolfX/nodebatis-lite"
+  },
   "dependencies": {
     "@types/mysql": "^2.15.5",
     "js-yaml": "^3.12.2",
